* Now example 'exhello.pp' runs on GNU/Linux.  May be some others too, but didn't tested. ;-)

--- a/makefile.all
+++ b/makefile.all
@@ -43,8 +43,7 @@ status: adbanner
 
 # Cleans everything.
 veryclean: clean
-	$(DELETE) $(EXMDIR)*$(BINSUF)
-	$(DELETE) $(EXMDIR)*$(BINSUF)
+	$(DELETE) $(EXMFILES)
 
 
 # Clean temporary files.
