* Fixed a lot of documentation. + Added subdirectories to documentation and LarTeX objective to makefile.

--- a/4.3/docs/makefile
+++ b/4.3/docs/makefile
@@ -6,5 +6,12 @@ ifeq ($(strip $(SOURCES)),)
   $(error ERROR: No source code found at ../lib/)
 endif
 
-all:
-	pasdoc $(SOURCES)
+.PHONY: all latex
+
+all: HTML
+
+HTML:
+	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --introduction intro.txt $(SOURCES)
+
+latex:
+	pasdoc -T Allegro.pas -O latex --cache-dir cache -E latex --introduction intro.txt $(SOURCES)
