* Several fixes in documentation and units. + Demo game and map editor now comples and runs on Linux.

--- a/4.3/makefile
+++ b/4.3/makefile
@@ -77,7 +77,7 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
-FLAGS = -g -O- -pg -Mtp
+FLAGS = -g -O- -pg
 #FLAGS = -02 -Mtp -Sh
 
 # -- Source files list --
