--- a/4.3/makefile.list
+++ b/4.3/makefile.list
@@ -19,14 +19,14 @@ endif
 EXMFILES = $(addprefix $(EXMDIR),$(addsuffix $(BINSUF), $(basename $(notdir $(TEM2) ) ) ) )
 
 # For the demo game.
-#TEM3 = $(wildcard $(DEMODIR)*.pas)
-#ifeq ($(strip $(TEM3)),)
-#$(error ERROR: No source code found at $(DEMODIR))
-#endif
-#TEM4 = $(wildcard $(DEMODIR)*.pp)
-#ifeq ($(strip $(TEM4)),)
-#$(error ERROR: No source code found at $(DEMODIR))
-#endif
-#DEMOSRC = $(DEMODIR)/%.pp $(TEM3)
-#DEMO = $(addprefix $(DEMODIR),$(addsuffix $(BINSUF), $(basename $(notdir $(TEM4) ) ) ) )
+TEM3 = $(wildcard $(DEMODIR)*.pas)
+ifeq ($(strip $(TEM3)),)
+$(error ERROR: No source code found at $(DEMODIR))
+endif
+TEM4 = $(wildcard $(DEMODIR)*.pp)
+ifeq ($(strip $(TEM4)),)
+$(error ERROR: No source code found at $(DEMODIR))
+endif
+DEMOSRC = $(DEMODIR)/%.pp $(TEM3)
+DEMO = $(addprefix $(DEMODIR),$(addsuffix $(BINSUF), $(basename $(notdir $(TEM4) ) ) ) )
 
