+ Added a TODO.txt file. * Renamed units "alsystem" and "al256tra" to "allegro" and "alvga"   respectivelly.  Read the TODO.txt file for more info. - Deleted alphabetical order on documentation.

--- a/4.3/makefile.all
+++ b/4.3/makefile.all
@@ -51,6 +51,8 @@ veryclean: clean
 	$(DELETE) $(EXMFILES)
 	$(DELETE) $(GLEXMFILES)
 	$(DELETE) $(DEMO)
+	$(DELETE) docs/html/*.*
+	$(DELETE) docs/cache/*.*
 
 
 # Clean temporary files.
