--- a/4.3/docs/makefile
+++ b/4.3/docs/makefile
@@ -11,7 +11,7 @@ endif
 all: HTML
 
 HTML:
-	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --sort=structures,constants,functions,types,variables --introduction intro.txt $(SOURCES)
+	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --introduction intro.txt $(SOURCES)
 
 latex:
-	pasdoc -T Allegro.pas -O latex --cache-dir cache -E latex --auto-abstract --sort=structures,constants,functions,types,variables --introduction intro.txt $(SOURCES)
+	pasdoc -T Allegro.pas -O latex --cache-dir cache -E latex --auto-abstract --introduction intro.txt $(SOURCES)
