+ Started an example about how to use Allegro.pas inside Lazarus application. * Some Grabber changes.

--- a/4.4/makefile
+++ b/4.4/makefile
@@ -28,7 +28,7 @@ PROJECT = Allegro.pas
 # ------------------
 ifeq ($(TARGET),WIN32)
 	# Platform name
-	PLATFORM=Winindows
+	PLATFORM=Windows
 	# Binary sufix
 	BINSUF = .exe
 	LIBSUF = .dll
