* Prepare for next release.

--- a/4.4/makefile
+++ b/4.4/makefile
@@ -70,8 +70,8 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
-FLAGS = -g -O- -pg
-#FLAGS = -02 -Mtp -Sh
+#FLAGS = -g -O- -pg -Sh
+FLAGS = -02 -Sh
 
 # -- Source files list --
 include makefile.list
