* Documentation updated. + Added hoock to intercept MIDI messages.

--- a/4.4/docs/makefile
+++ b/4.4/docs/makefile
@@ -11,7 +11,7 @@ endif
 all: HTML
 
 HTML:
-	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --introduction intro.txt $(SOURCES)
+	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --introduction intro.txt --conclusion progs.txt $(SOURCES)
 
 latex:
-	pasdoc -T Allegro.pas -O latex --cache-dir cache -E latex --auto-abstract --introduction intro.txt $(SOURCES)
+	pasdoc -T Allegro.pas -O latex --cache-dir cache -E latex --auto-abstract --introduction intro.txt --conclusion progs.txt $(SOURCES)
