+ Added another 3D example (buggy). * Fixed some procedures and types of al3d.

--- a/4.4/makefile
+++ b/4.4/makefile
@@ -69,8 +69,8 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
-#FLAGS = -g -O- -pg -Sh
-FLAGS = -02 -Sh
+FLAGS = -g -O- -pg -Sh
+#FLAGS = -02 -Sh
 
 # -- Source files list --
 include makefile.list
