--- a/4.4/examples/lazarus/example.lpi
+++ b/4.4/examples/lazarus/example.lpi
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
-    <Version Value="6"/>
+    <Version Value="7"/>
     <General>
       <MainUnit Value="0"/>
       <AutoCreateForms Value="False"/>
-      <IconPath Value="./"/>
       <TargetFileExt Value=""/>
+      <Title Value="The Allegro's Lazarus example"/>
+      <Icon Value="0"/>
       <UseXPManifest Value="True"/>
       <ActiveEditorIndexAtStart Value="1"/>
     </General>
@@ -31,64 +31,194 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="8">
       <Unit0>
         <Filename Value="example.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="example"/>
-        <CursorPos X="33" Y="21"/>
-        <TopLine Value="1"/>
+        <CursorPos X="1" Y="66"/>
+        <TopLine Value="47"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="UnitMainForm.pas"/>
-        <ComponentName Value="MainForm"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
-        <ResourceFilename Value="UnitMainForm.lrs"/>
         <UnitName Value="UnitMainForm"/>
-        <CursorPos X="18" Y="47"/>
-        <TopLine Value="1"/>
+        <CursorPos X="1" Y="147"/>
+        <TopLine Value="121"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
         <Loaded Value="True"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="UnitBitmapInterface.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="UnitBitmapInterface"/>
+        <CursorPos X="1" Y="86"/>
+        <TopLine Value="46"/>
+        <UsageCount Value="24"/>
+      </Unit2>
+      <Unit3>
+        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/forms.pp"/>
+        <UnitName Value="Forms"/>
+        <CursorPos X="1" Y="129"/>
+        <TopLine Value="129"/>
+        <UsageCount Value="10"/>
+      </Unit3>
+      <Unit4>
+        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/extctrls.pp"/>
+        <UnitName Value="ExtCtrls"/>
+        <CursorPos X="14" Y="547"/>
+        <TopLine Value="527"/>
+        <UsageCount Value="10"/>
+      </Unit4>
+      <Unit5>
+        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/controls.pp"/>
+        <UnitName Value="Controls"/>
+        <CursorPos X="26" Y="1917"/>
+        <TopLine Value="1897"/>
+        <UsageCount Value="10"/>
+      </Unit5>
+      <Unit6>
+        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/graphics.pp"/>
+        <UnitName Value="Graphics"/>
+        <CursorPos X="21" Y="53"/>
+        <TopLine Value="33"/>
+        <UsageCount Value="10"/>
+      </Unit6>
+      <Unit7>
+        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/graphtype.pp"/>
+        <UnitName Value="GraphType"/>
+        <CursorPos X="3" Y="39"/>
+        <TopLine Value="19"/>
+        <UsageCount Value="10"/>
+      </Unit7>
     </Units>
-    <JumpHistory Count="8" HistoryIndex="7">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="3" Column="1" TopLine="1"/>
+        <Caret Line="111" Column="27" TopLine="80"/>
       </Position1>
       <Position2>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="18" Column="3" TopLine="1"/>
+        <Caret Line="134" Column="57" TopLine="119"/>
       </Position2>
       <Position3>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="20" Column="26" TopLine="1"/>
+        <Caret Line="138" Column="67" TopLine="118"/>
       </Position3>
       <Position4>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="21" Column="18" TopLine="1"/>
+        <Caret Line="41" Column="33" TopLine="1"/>
       </Position4>
       <Position5>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="20" Column="19" TopLine="1"/>
+        <Caret Line="139" Column="1" TopLine="117"/>
       </Position5>
       <Position6>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="26" Column="52" TopLine="14"/>
+        <Caret Line="140" Column="1" TopLine="117"/>
       </Position6>
       <Position7>
-        <Filename Value="example.lpr"/>
-        <Caret Line="26" Column="45" TopLine="1"/>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="139" Column="1" TopLine="117"/>
       </Position7>
       <Position8>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="30" Column="5" TopLine="24"/>
+        <Caret Line="138" Column="1" TopLine="117"/>
       </Position8>
+      <Position9>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="137" Column="1" TopLine="117"/>
+      </Position9>
+      <Position10>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="136" Column="1" TopLine="117"/>
+      </Position10>
+      <Position11>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="135" Column="1" TopLine="117"/>
+      </Position11>
+      <Position12>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="134" Column="1" TopLine="117"/>
+      </Position12>
+      <Position13>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="140" Column="1" TopLine="117"/>
+      </Position13>
+      <Position14>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="46" Column="2" TopLine="25"/>
+      </Position14>
+      <Position15>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="45" Column="2" TopLine="25"/>
+      </Position15>
+      <Position16>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="46" Column="2" TopLine="25"/>
+      </Position16>
+      <Position17>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="47" Column="2" TopLine="25"/>
+      </Position17>
+      <Position18>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="46" Column="2" TopLine="25"/>
+      </Position18>
+      <Position19>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="81" Column="24" TopLine="61"/>
+      </Position19>
+      <Position20>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="80" Column="24" TopLine="61"/>
+      </Position20>
+      <Position21>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="79" Column="24" TopLine="61"/>
+      </Position21>
+      <Position22>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="78" Column="24" TopLine="61"/>
+      </Position22>
+      <Position23>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="79" Column="24" TopLine="61"/>
+      </Position23>
+      <Position24>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="80" Column="24" TopLine="61"/>
+      </Position24>
+      <Position25>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="81" Column="24" TopLine="61"/>
+      </Position25>
+      <Position26>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="82" Column="24" TopLine="61"/>
+      </Position26>
+      <Position27>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="69" Column="67" TopLine="69"/>
+      </Position27>
+      <Position28>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="70" Column="67" TopLine="69"/>
+      </Position28>
+      <Position29>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="152" Column="46" TopLine="116"/>
+      </Position29>
+      <Position30>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="159" Column="46" TopLine="119"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -100,9 +230,25 @@
     <Parsing>
       <SyntaxOptions>
         <CStyleOperator Value="False"/>
+        <AllowLabel Value="False"/>
+        <UseAnsiStrings Value="True"/>
       </SyntaxOptions>
     </Parsing>
+    <CodeGeneration>
+      <Checks>
+        <IOChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+        <StackChecks Value="True"/>
+      </Checks>
+      <Optimizations>
+        <OptimizationLevel Value="0"/>
+      </Optimizations>
+    </CodeGeneration>
     <Linking>
+      <Debugging>
+        <GenerateDebugInfo Value="True"/>
+        <GenGProfCode Value="True"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
