* A lot of functions and procedures declared as "INLINE".  This should make   them faster but I didn't confirmed it. * Some documentation updates.

--- a/4.4/makefile
+++ b/4.4/makefile
@@ -69,7 +69,7 @@ EXMDIR = examples/
 LIBDIR = lib/
 
 FLAGS = -g -O- -pg -Sh
-#FLAGS = -02 -Sh
+#FLAGS = -02 -Sh -Si
 
 # -- Source files list --
 include makefile.list
