--- a/4.4/makefile
+++ b/4.4/makefile
@@ -68,8 +68,9 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
+#FLAGS = -Nu -O3 -Sh -Si -Xs -XX
+# Use next line instead to activate debug.
 FLAGS = -g -O- -pg -Sh
-#FLAGS = -02 -Sh -Si
 
 # -- Source files list --
 include makefile.list
