* Revised makefiles and build process.  Fixed Windows selection when using   Bash script. * Revised readme files. * Modified graphic mode selection of ex3d and exzbuf examples to prevent   blinking facets due to fixed point imprecission.

--- a/4.4/makefile
+++ b/4.4/makefile
@@ -68,9 +68,9 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
-#FLAGS = -Nu -O3 -Sh -Si -Xs -XX
+FLAGS = -Nu -O3 -Sh -Si -Xs -XX
 # Use next line instead to activate debug.
-FLAGS = -g -O- -pg -Sh
+#FLAGS = -g -O- -pg -Sh
 
 # -- Source files list --
 include makefile.list
