--- a/4.4/examples/lazarus/example.lpi
+++ b/4.4/examples/lazarus/example.lpi
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="7"/>
+    <PathDelim Value="/"/>
+    <Version Value="6"/>
     <General>
       <MainUnit Value="0"/>
       <AutoCreateForms Value="False"/>
+      <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="The Allegro's Lazarus example"/>
-      <Icon Value="0"/>
       <UseXPManifest Value="True"/>
       <ActiveEditorIndexAtStart Value="0"/>
     </General>
@@ -42,12 +43,13 @@
       </Unit0>
       <Unit1>
         <Filename Value="UnitMainForm.pas"/>
-        <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
+        <IsPartOfProject Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <ResourceFilename Value="UnitMainForm.lrs"/>
         <UnitName Value="UnitMainForm"/>
-        <CursorPos X="3" Y="122"/>
-        <TopLine Value="119"/>
+        <CursorPos X="9" Y="77"/>
+        <TopLine Value="71"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
@@ -57,7 +59,7 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitBitmapInterface"/>
         <CursorPos X="1" Y="101"/>
-        <TopLine Value="87"/>
+        <TopLine Value="77"/>
         <EditorIndex Value="1"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
