* Now the makefile's "clean" target deletes also the "*.a" files. * Installation explanation fixed in Spanish documentation. * Fixed the shared-object filename on Linux.

--- a/4.4/makefile.all
+++ b/4.4/makefile.all
@@ -42,9 +42,9 @@ veryclean: clean
 
 # Clean temporary files.
 clean:
-	$(DELETE) $(EXMDIR)*$(OBJSUF)
 	$(DELETE) $(LIBDIR)*$(OBJSUF)
 	$(DELETE) $(LIBDIR)*.ppu
+	$(DELETE) $(LIBDIR)*.a
 	$(DELETE) $(DEMODIR)*$(OBJSUF)
 	$(DELETE) $(DEMODIR)*.ppu
 
