- Removed "latex" from doc's makefile. + Added exjoy example.

--- a/4.4/docs/makefile
+++ b/4.4/docs/makefile
@@ -6,12 +6,9 @@ ifeq ($(strip $(SOURCES)),)
   $(error ERROR: No source code found at ../lib/)
 endif
 
-.PHONY: all latex
+.PHONY: all
 
 all: HTML
 
 HTML:
 	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --auto-link --introduction intro.txt --conclusion progs.txt $(SOURCES)
-
-latex:
-	pasdoc -T Allegro.pas -O latex --cache-dir cache -E latex --auto-abstract --auto-link --introduction intro.txt --conclusion progs.txt $(SOURCES)
