+ [4.5] Added more scafolding, including an unit to manage initialization and finalization stuff.

--- a/BRANCHES/4.5/makefile
+++ b/BRANCHES/4.5/makefile
@@ -72,6 +72,9 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
+UNITS = -Fu$(LIBDIR) -Fu$(LIBDIR)internal
+INCLUDES = -Fi$(LIBDIR) -Fi$(LIBDIR)fpc
+
 FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
 #FLAGS = Co -CO -Ct -gl -O- -pg -Sh $(EFLAGS)
