--- a/TRUNK/examples/lazarus/example.lpi
+++ b/TRUNK/examples/lazarus/example.lpi
@@ -1,20 +1,23 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
-    <Version Value="6"/>
+    <Version Value="9"/>
     <General>
+      <Flags>
+        <LRSInOutputDirectory Value="False"/>
+      </Flags>
       <MainUnit Value="0"/>
       <AutoCreateForms Value="False"/>
-      <IconPath Value="./"/>
-      <TargetFileExt Value=""/>
       <Title Value="The Allegro's Lazarus example"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
-      <ProjectVersion Value=""/>
+      <StringTable ProductVersion=""/>
     </VersionInfo>
+    <BuildModes Count="1">
+      <Item1 Name="default" Default="True"/>
+    </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -37,70 +40,74 @@
         <Filename Value="example.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="example"/>
-        <CursorPos X="34" Y="39"/>
         <TopLine Value="23"/>
+        <CursorPos X="34" Y="39"/>
         <UsageCount Value="26"/>
       </Unit0>
       <Unit1>
         <Filename Value="UnitMainForm.pas"/>
-        <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
-        <ResourceFilename Value="UnitMainForm.lrs"/>
         <UnitName Value="UnitMainForm"/>
-        <CursorPos X="9" Y="77"/>
-        <TopLine Value="71"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="139"/>
+        <CursorPos X="1" Y="144"/>
+        <FoldState Value=" TKiS01b"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="UnitBitmapInterface.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitBitmapInterface"/>
-        <CursorPos X="1" Y="101"/>
-        <TopLine Value="77"/>
         <EditorIndex Value="1"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="85"/>
+        <CursorPos X="1" Y="114"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit2>
       <Unit3>
-        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/forms.pp"/>
+        <Filename Value="/usr/lib/lazarus/0.9.28.2/lcl/forms.pp"/>
         <UnitName Value="Forms"/>
-        <CursorPos X="1" Y="129"/>
         <TopLine Value="129"/>
+        <CursorPos X="1" Y="129"/>
         <UsageCount Value="10"/>
       </Unit3>
       <Unit4>
-        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/extctrls.pp"/>
+        <Filename Value="/usr/lib/lazarus/0.9.28.2/lcl/extctrls.pp"/>
         <UnitName Value="ExtCtrls"/>
-        <CursorPos X="14" Y="547"/>
         <TopLine Value="527"/>
+        <CursorPos X="14" Y="547"/>
         <UsageCount Value="10"/>
       </Unit4>
       <Unit5>
-        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/controls.pp"/>
+        <Filename Value="/usr/lib/lazarus/0.9.28.2/lcl/controls.pp"/>
         <UnitName Value="Controls"/>
-        <CursorPos X="26" Y="1917"/>
         <TopLine Value="1897"/>
+        <CursorPos X="26" Y="1917"/>
         <UsageCount Value="10"/>
       </Unit5>
       <Unit6>
-        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/graphics.pp"/>
+        <Filename Value="/usr/lib/lazarus/0.9.28.2/lcl/graphics.pp"/>
         <UnitName Value="Graphics"/>
-        <CursorPos X="21" Y="53"/>
         <TopLine Value="33"/>
+        <CursorPos X="21" Y="53"/>
         <UsageCount Value="10"/>
       </Unit6>
       <Unit7>
-        <Filename Value="../../../../../../../usr/lib/lazarus/0.9.28.2/lcl/graphtype.pp"/>
+        <Filename Value="/usr/lib/lazarus/0.9.28.2/lcl/graphtype.pp"/>
         <UnitName Value="GraphType"/>
-        <CursorPos X="3" Y="39"/>
         <TopLine Value="19"/>
+        <CursorPos X="3" Y="39"/>
         <UsageCount Value="10"/>
       </Unit7>
     </Units>
-    <JumpHistory Count="23" HistoryIndex="22">
+    <JumpHistory Count="26" HistoryIndex="25">
       <Position1>
         <Filename Value="UnitMainForm.pas"/>
         <Caret Line="134" Column="1" TopLine="117"/>
@@ -193,19 +200,30 @@
         <Filename Value="UnitMainForm.pas"/>
         <Caret Line="139" Column="71" TopLine="129"/>
       </Position23>
+      <Position24>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="152" Column="18" TopLine="139"/>
+      </Position24>
+      <Position25>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="164" Column="42" TopLine="140"/>
+      </Position25>
+      <Position26>
+        <Filename Value="UnitMainForm.pas"/>
+        <Caret Line="163" Column="42" TopLine="139"/>
+      </Position26>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="8"/>
+    <Version Value="9"/>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)/"/>
-      <OtherUnitFiles Value="../../lib/"/>
+      <IncludeFiles Value="$(ProjOutDir)"/>
+      <OtherUnitFiles Value="../../lib"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
         <CStyleOperator Value="False"/>
         <AllowLabel Value="False"/>
-        <UseAnsiStrings Value="True"/>
       </SyntaxOptions>
     </Parsing>
     <CodeGeneration>
