[A5]  * Thanks to Elias (www.allegro.cc/) I've modified the code to support Delphi.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -4,17 +4,57 @@
   neccessary to include it in your projects. *)
 
 {$IFNDEF FPC}
+  {$IFNDEF DELPHI}
 {
   This version wan't tested with other compilers than Free Pascal.
   May be you want to help porting it to other systems and compilers, won't you?
 }
- {$WARNING I didn't test Allegro.pas with this compiler!  Do you want to help? }
+    {$ERROR I didn't test Allegro.pas with this compiler!  Do you want to help? }
+  {$ENDIF}
 {$ENDIF}
+
+
+
+{ Detects and configures the compiler. }
 
 {$IFDEF FPC}
 { Free Pascal. }
- {$MODE FPC}
- {$PACKRECORDS C}
- {$LONGSTRINGS ON}
- { $SMARTLINK ON} { Note that it isn't enabled. }
+  {$MODE FPC}
+  {$PACKRECORDS C}
+  {$LONGSTRINGS ON}
+  { $SMARTLINK ON} { Note that it isn't enabled. }
+  {$IFDEF UNIX}
+    {$IF DEFINED(DARWIN) OR DEFINED(QNX) OR DEFINED(BEOS)}
+{
+  This version wan't tested on those systems.
+  May be you want to help porting it to other systems and compilers, won't you?
+}
+      {$ERROR I didn't test Allegro.pas on your Operating System.  Do you want to help? }
+    {$ENDIF}
+  {$ENDIF}
+{$ENDIF}
+
+{$IFDEF DELPHI}
+{ Delphi }
+  {$PACKRECORDS C}
+  {$LONGSTRINGS ON}
+{TODO: Detect MacOS and iOS}
+{$ENDIF}
+
+
+
+{ Defines some constants with the names of the library files. }
+CONST
+{$IF DEFINED(UNIX)}
+  ALLEGRO_LIB_NAME       = 'liballegro.so.5.0';
+  ALLEGRO_FONT_LIB_NAME  = 'liballegro_font.so.5.0';
+  ALLEGRO_IMAGE_LIB_NAME = 'liballegro_image.so.5.0';
+  ALLEGRO_MAIN_LIB_NAME  = 'liballegro_main.so.5.0';
+{$ELSEIF DEFINED(WINDOWS)}
+{ NOTE: It uses monolith staticly linked version. }
+  ALLEGRO_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_FONT_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_IMAGE_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_MAIN_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
+{ TODO: Use macros to select other posibilities? }
 {$ENDIF}
